# breast-cancer-wbc-ml

./: .gitignore  LICENSE  README (1).md  README.md  pyproject.toml  requirements.txt
docs/: about-dataset.md  about-ml-algorithms.md  about-performance-metrics.md  workflow.md
notebooks/: wbc-modelling.ipynb
reports/figures/: model_results.csv
